// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`List Item Layout horizontal itemLayout List should accept extra node 1`] = `
<div
  class="g-list g-list-split css-var-root"
>
  <div
    aria-busy="false"
    aria-live="polite"
    class="g-spin css-var-root"
  >
    <div
      class="g-spin-container"
    >
      <ul
        class="g-list-items g-list-container css-var-root"
      >
        <li
          class="g-list-item"
        >
          <div
            class="g-list-item-meta"
          >
            <div
              class="g-list-item-meta-content"
            >
              <h4
                class="g-list-item-meta-title"
              >
                <a
                  href="https://ant.design"
                >
                  ant design
                </a>
              </h4>
              <div
                class="g-list-item-meta-description"
              >
                Ant Design, a design language for background applications, is refined by Ant UED Team.
              </div>
            </div>
          </div>
          <ul
            class="g-list-item-action"
          >
            <li>
              <a>
                Action
              </a>
            </li>
          </ul>
          <span>
            extra
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`List Item Layout rowKey could be function 1`] = `
<div
  class="g-list g-list-split css-var-root"
>
  <div
    aria-busy="false"
    aria-live="polite"
    class="g-spin css-var-root"
  >
    <div
      class="g-spin-container"
    >
      <ul
        class="g-list-items g-list-container css-var-root"
      >
        <li
          class="g-list-item"
        >
          ant design
        </li>
        <li
          class="g-list-item"
        >
          ant design
        </li>
        <li
          class="g-list-item"
        >
          ant design
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`List Item Layout rowKey could be string 1`] = `
<div
  class="g-list g-list-split css-var-root"
>
  <div
    aria-busy="false"
    aria-live="polite"
    class="g-spin css-var-root"
  >
    <div
      class="g-spin-container"
    >
      <ul
        class="g-list-items g-list-container css-var-root"
      >
        <li
          class="g-list-item"
        >
          ant design
        </li>
        <li
          class="g-list-item"
        >
          ant design
        </li>
        <li
          class="g-list-item"
        >
          ant design
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`List Item Layout should render in RTL direction 1`] = `
<div
  class="g-list g-list-split g-list-rtl css-var-root"
>
  <div
    aria-busy="false"
    aria-live="polite"
    class="g-spin g-spin-rtl css-var-root"
  >
    <div
      class="g-spin-container"
    >
      <ul
        class="g-list-items g-list-container css-var-root"
      >
        <li
          class="g-list-item"
        >
          <div
            class="g-list-item-meta"
          >
            <div
              class="g-list-item-meta-content"
            >
              <h4
                class="g-list-item-meta-title"
              >
                <a
                  href="https://ant.design"
                >
                  ant design
                </a>
              </h4>
              <div
                class="g-list-item-meta-description"
              >
                Ant Design, a design language for background applications, is refined by Ant UED Team.
              </div>
            </div>
          </div>
          <ul
            class="g-list-item-action"
          >
            <li>
              <a>
                Action
              </a>
            </li>
          </ul>
          <span>
            extra
          </span>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
